Hero z-index fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -107,6 +107,8 @@ body {
   padding: 1rem 2.13rem;
   cursor: pointer;
   transition: background-color 300ms;
+  text-decoration: none;
+  display: inline-block;
 }
 
 .button:hover,
